working table after fetch and reopening